--- a/README
+++ b/README
@@ -21,3 +21,7 @@ print
 
 ========LICENSE========
 GPL-v3
+
+========ACKNOWLEDGEMENT========
+ChiYuan Zhang  <pluskid@gmail.com>
+Chih-Hao Tsai  <hao520@yahoo.com>
